--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         .roulette-container {
             position: relative;
             width: 100%;
-            height: 10vh; /* Slightly smaller than your example */
+            height: 10vh; /* Adjust size */
             overflow: hidden;
             display: flex;
             align-items: center;
@@ -27,8 +27,8 @@
         .roulette-wheel {
             display: flex;
             position: relative;
-            transition: transform 4s cubic-bezier(0.33, 1, 0.68, 1); /* Transition instead of animation */
             will-change: transform;
+            transition: transform 4s cubic-bezier(0.33, 1, 0.68, 1); /* Smooth transition */
         }
 
         .spot {
@@ -84,17 +84,18 @@
     </style>
 </head>
 <body>
+
     <div class="roulette-container">
         <div id="countdown">5</div>
         <div class="highlight-bar"></div>
         <div class="roulette-wheel" id="roulette-wheel">
-            <!-- Adding numbers/icons to loop seamlessly -->
+            <!-- Initial icons -->
             <div class="spot red"><img src="path-to-icon1.png" alt="Icon 1"></div>
             <div class="spot black"><img src="path-to-icon2.png" alt="Icon 2"></div>
             <div class="spot red"><img src="path-to-icon3.png" alt="Icon 3"></div>
             <div class="spot black"><img src="path-to-icon4.png" alt="Icon 4"></div>
             <div class="spot green"><img src="path-to-icon5.png" alt="Green"></div>
-            <!-- Duplicate for seamless effect -->
+            <!-- Duplicate spots for seamless scrolling -->
             <div class="spot red"><img src="path-to-icon1.png" alt="Icon 1"></div>
             <div class="spot black"><img src="path-to-icon2.png" alt="Icon 2"></div>
             <div class="spot red"><img src="path-to-icon3.png" alt="Icon 3"></div>
@@ -106,24 +107,48 @@
     <script>
         const wheel = document.getElementById("roulette-wheel");
         const countdownElement = document.getElementById("countdown");
-        let currentPosition = 0; // Track the position of the last spin
+        let currentPosition = 0;
         let countdownValue = 5;
         let countdownTimer;
-        let spinDistance = 1600; // Define the spin distance
+        const spinDistance = 1600;  // The distance the wheel moves per spin
+        const icons = [
+            "path-to-icon1.png",
+            "path-to-icon2.png",
+            "path-to-icon3.png",
+            "path-to-icon4.png",
+            "path-to-icon5.png"
+        ];
+
+        function addNewSpots() {
+            // Add new spots dynamically to ensure smooth loop
+            const spots = icons.map((src, index) => {
+                const spot = document.createElement('div');
+                spot.classList.add('spot', index % 2 === 0 ? 'red' : 'black');
+                const img = document.createElement('img');
+                img.src = src;
+                img.alt = `Icon ${index + 1}`;
+                spot.appendChild(img);
+                return spot;
+            });
+
+            spots.forEach(spot => wheel.appendChild(spot));
+        }
 
         function startSpin() {
             // Hide countdown and start spinning
             countdownElement.style.display = "none";
-            
-            currentPosition += spinDistance; // Move to the next position
+
+            currentPosition += spinDistance; // Increment the position by the spin distance
             wheel.style.transition = "transform 4s cubic-bezier(0.33, 1, 0.68, 1)";
             wheel.style.transform = `translateX(-${currentPosition}px)`;
 
-            // After spin, reset the transition and prepare for the next spin
+            // After the spin, reset the transition to prepare for the next round
             setTimeout(() => {
                 wheel.style.transition = "none";
                 wheel.style.transform = `translateX(-${currentPosition}px)`;
-                void wheel.offsetWidth; // Trigger reflow to reset the transition
+
+                // Add new spots for the next round
+                addNewSpots();
             }, 4000);
         }
 
@@ -139,7 +164,7 @@
             }, 1000);
         }
 
-        // Start the countdown on page load
+        // Start countdown on page load
         countdown();
 
         // Trigger the next countdown and spin after a delay
@@ -147,8 +172,7 @@
             countdownValue = 5;
             countdownElement.style.display = "block";
             countdown();
-        }, 5000); // 5 seconds interval for each spin
+        }, 5000);  // 5 seconds between each spin
     </script>
 </body>
 </html>
-
