--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                 <div class="spot black">13</div>
                 <div class="spot green">14</div>
             </div>
+            <div class="winning-indicator"></div>
         </div>
         <div class="bet-options">
             <button onclick="placeBet('red')">Bet on Red (2x)</button>
@@ -60,6 +61,7 @@
             <button onclick="placeBet('green')">Bet on Green (14x)</button>
         </div>
         <div class="result" id="result"></div>
+        <div class="bet-placed" id="bet-placed"></div>
     </div>
 
     <!-- Footer -->
@@ -68,10 +70,5 @@
     </div>
 
     <script src="script.js" defer></script>
-</body>
-</html>
-        // Initialize the game
-        startCountdown();
-    </script>
 </body>
 </html>
